--- a/package.json
+++ b/package.json
@@ -1,175 +1,170 @@
 {
-	"name": "youtube-music",
-	"productName": "YouTube Music",
-	"version": "1.19.0",
-	"description": "YouTube Music Desktop App - including custom plugins",
-	"license": "MIT",
-	"repository": "th-ch/youtube-music",
-	"author": {
-		"name": "th-ch",
-		"email": "th-ch@users.noreply.github.com",
-		"url": "https://github.com/th-ch/youtube-music"
-	},
-	"build": {
-		"appId": "com.github.th-ch.youtube-music",
-		"productName": "YouTube Music",
-		"mac": {
-			"identity": null,
-			"files": [
-				"!plugins/taskbar-mediacontrol${/*}"
-			],
-			"target": [
-				{
-					"target": "dmg",
-					"arch": [
-						"x64",
-						"arm64"
-					]
-				}
-			],
-			"icon": "assets/generated/icons/mac/icon.icns"
-		},
-		"win": {
-			"icon": "assets/generated/icons/win/icon.ico",
-			"files": [
-				"!plugins/touchbar${/*}"
-			],
-			"target": [
-				{
-					"target": "nsis",
-					"arch": [
-						"x64",
-						"arm64"
-					]
-				},
-				{
-					"target": "portable",
-					"arch": [
-						"x64",
-						"arm64"
-					]
-				}
-			]
-		},
-		"nsis": {
-			"runAfterFinish": false
-		},
-		"linux": {
-			"icon": "assets/generated/icons/png",
-			"files": [
-				"!plugins/{touchbar,taskbar-mediacontrol}${/*}"
-			],
-			"category": "AudioVideo",
-			"target": [
-				"AppImage",
-				"snap",
-				"freebsd",
-				"deb",
-				"rpm"
-			]
-		},
-		"snap": {
-			"slots": [
-				{
-					"mpris": {
-						"interface": "mpris"
-					}
-				}
-			]
-		}
-	},
-	"scripts": {
-		"test": "playwright test",
-		"test:debug": "DEBUG=pw:browser* playwright test",
-		"start": "electron .",
-		"start:debug": "ELECTRON_ENABLE_LOGGING=1 electron .",
-		"icon": "del-cli assets/generated && electron-icon-builder --input=assets/youtube-music.png --output=assets/generated",
-		"generate:package": "node utils/generate-package-json.js",
-		"postinstall": "yarn run icon && yarn run plugins",
-		"clean": "del-cli dist",
-		"build": "yarn run clean && electron-builder --win --mac --linux -p never",
-		"build:linux": "yarn run clean && electron-builder --linux -p never",
-		"build:mac": "yarn run clean && electron-builder --mac dmg:x64 -p never",
-		"build:mac:arm64": "yarn run clean && electron-builder --mac dmg:arm64 -p never",
-		"build:win": "yarn run clean && electron-builder --win -p never",
-		"lint": "xo",
-		"changelog": "auto-changelog",
-		"plugins": "yarn run plugin:adblocker && yarn run plugin:bypass-age-restrictions",
-		"plugin:adblocker": "del-cli plugins/adblocker/ad-blocker-engine.bin && node plugins/adblocker/blocker.js",
-		"plugin:bypass-age-restrictions": "del-cli node_modules/simple-youtube-age-restriction-bypass/package.json && yarn run generate:package simple-youtube-age-restriction-bypass",
-		"release:linux": "yarn run clean && electron-builder --linux -p always -c.snap.publish=github",
-		"release:mac": "yarn run clean && electron-builder --mac -p always",
-		"release:win": "yarn run clean && electron-builder --win -p always"
-	},
-	"engines": {
-		"node": ">=16.0.0",
-		"npm": "Please use yarn instead"
-	},
-	"dependencies": {
-		"@cliqz/adblocker-electron": "^1.26.5",
-		"@ffmpeg/core": "^0.11.0",
-		"@ffmpeg/ffmpeg": "^0.11.6",
-		"@foobar404/wave": "^2.0.4",
-		"@xhayper/discord-rpc": "^1.0.15",
-		"async-mutex": "^0.4.0",
-		"browser-id3-writer": "^4.4.0",
-		"butterchurn": "^2.6.7",
-		"butterchurn-presets": "^2.4.7",
-		"custom-electron-prompt": "^1.5.7",
-		"custom-electron-titlebar": "^4.1.6",
-		"electron-better-web-request": "^1.0.1",
-		"electron-debug": "^3.2.0",
-		"electron-is": "^3.0.0",
-		"electron-localshortcut": "^3.2.1",
-		"electron-store": "^8.1.0",
-		"electron-unhandled": "^4.0.1",
-		"electron-updater": "^5.3.0",
-		"filenamify": "^4.3.0",
-		"howler": "^2.2.3",
-		"html-to-text": "^9.0.4",
-		"keyboardevent-from-electron-accelerator": "^2.0.0",
-		"keyboardevents-areequal": "^0.2.2",
-		"md5": "^2.3.0",
-		"mpris-service": "^2.1.2",
-		"node-fetch": "^2.6.8",
-		"simple-youtube-age-restriction-bypass": "https://gitpkg.now.sh/api/pkg.tgz?url=zerodytrash/Simple-YouTube-Age-Restriction-Bypass&commit=v2.5.4",
-		"vudio": "^2.1.1",
-		"youtubei.js": "^4.1.0",
-		"ytpl": "^2.3.0"
-	},
-	"devDependencies": {
-		"@playwright/test": "^1.29.2",
-		"auto-changelog": "^2.4.0",
-		"del-cli": "^5.0.0",
-		"electron": "^22.0.2",
-		"electron-builder": "^23.6.0",
-		"electron-devtools-installer": "^3.2.0",
-		"electron-icon-builder": "^2.0.1",
-		"node-gyp": "^9.3.1",
-		"playwright": "^1.29.2",
-		"xo": "^0.53.1"
-	},
-	"auto-changelog": {
-		"hideCredit": true,
-		"package": true,
-		"unreleased": true,
-		"output": "changelog.md"
-	},
-	"xo": {
-		"envs": [
-			"node",
-			"browser"
-		],
-		"rules": {
-			"quotes": [
-				"error",
-				"double",
-				{
-					"avoidEscape": true,
-					"allowTemplateLiterals": true
-				}
-			]
-		}
-	},
-	"packageManager": "yarn@3.4.1"
+    "name": "youtube-music",
+    "productName": "YouTube Music",
+    "version": "1.19.0",
+    "description": "YouTube Music Desktop App - including custom plugins",
+    "license": "MIT",
+    "repository": "th-ch/youtube-music",
+    "author": {
+        "name": "th-ch",
+        "email": "th-ch@users.noreply.github.com",
+        "url": "https://github.com/th-ch/youtube-music"
+    },
+    "build": {
+        "appId": "com.github.th-ch.youtube-music",
+        "productName": "YouTube Music",
+        "mac": {
+            "identity": null,
+            "files": [
+                "!plugins/taskbar-mediacontrol${/*}"
+            ],
+            "target": [{
+                "target": "dmg",
+                "arch": [
+                    "x64",
+                    "arm64"
+                ]
+            }],
+            "icon": "assets/generated/icons/mac/icon.icns"
+        },
+        "win": {
+            "icon": "assets/generated/icons/win/icon.ico",
+            "files": [
+                "!plugins/touchbar${/*}"
+            ],
+            "target": [{
+                    "target": "nsis",
+                    "arch": [
+                        "x64",
+                        "arm64"
+                    ]
+                },
+                {
+                    "target": "portable",
+                    "arch": [
+                        "x64",
+                        "arm64"
+                    ]
+                }
+            ]
+        },
+        "nsis": {
+            "runAfterFinish": false
+        },
+        "linux": {
+            "icon": "assets/generated/icons/png",
+            "files": [
+                "!plugins/{touchbar,taskbar-mediacontrol}${/*}"
+            ],
+            "category": "AudioVideo",
+            "target": [
+                "AppImage",
+                "snap",
+                "freebsd",
+                "deb",
+                "rpm"
+            ]
+        },
+        "snap": {
+            "slots": [{
+                "mpris": {
+                    "interface": "mpris"
+                }
+            }]
+        }
+    },
+    "scripts": {
+        "test": "playwright test",
+        "test:debug": "DEBUG=pw:browser* playwright test",
+        "start": "electron .",
+        "start:debug": "ELECTRON_ENABLE_LOGGING=1 electron .",
+        "icon": "del-cli assets/generated && electron-icon-builder --input=assets/youtube-music.png --output=assets/generated",
+        "generate:package": "node utils/generate-package-json.js",
+        "postinstall": "yarn run icon && yarn run plugins",
+        "clean": "del-cli dist",
+        "build": "yarn run clean && electron-builder --win --mac --linux -p never",
+        "build:linux": "yarn run clean && electron-builder --linux -p never",
+        "build:mac": "yarn run clean && electron-builder --mac dmg:x64 -p never",
+        "build:mac:arm64": "yarn run clean && electron-builder --mac dmg:arm64 -p never",
+        "build:win": "yarn run clean && electron-builder --win -p never",
+        "lint": "xo",
+        "changelog": "auto-changelog",
+        "plugins": "yarn run plugin:adblocker && yarn run plugin:bypass-age-restrictions",
+        "plugin:adblocker": "del-cli plugins/adblocker/ad-blocker-engine.bin && node plugins/adblocker/blocker.js",
+        "plugin:bypass-age-restrictions": "del-cli node_modules/simple-youtube-age-restriction-bypass/package.json && yarn run generate:package simple-youtube-age-restriction-bypass",
+        "release:linux": "yarn run clean && electron-builder --linux -p always -c.snap.publish=github",
+        "release:mac": "yarn run clean && electron-builder --mac -p always",
+        "release:win": "yarn run clean && electron-builder --win -p always"
+    },
+    "engines": {
+        "node": ">=16.0.0",
+        "npm": "Please use yarn instead"
+    },
+    "dependencies": {
+        "@cliqz/adblocker-electron": "^1.26.5",
+        "@ffmpeg/core": "^0.11.0",
+        "@ffmpeg/ffmpeg": "^0.11.6",
+        "@foobar404/wave": "^2.0.4",
+        "@xhayper/discord-rpc": "^1.0.15",
+        "async-mutex": "^0.4.0",
+        "browser-id3-writer": "^4.4.0",
+        "butterchurn": "^2.6.7",
+        "butterchurn-presets": "^2.4.7",
+        "custom-electron-prompt": "^1.5.7",
+        "custom-electron-titlebar": "^4.1.6",
+        "electron-better-web-request": "^1.0.1",
+        "electron-debug": "^3.2.0",
+        "electron-is": "^3.0.0",
+        "electron-localshortcut": "^3.2.1",
+        "electron-store": "^8.1.0",
+        "electron-unhandled": "^4.0.1",
+        "electron-updater": "^5.3.0",
+        "filenamify": "^4.3.0",
+        "howler": "^2.2.3",
+        "html-to-text": "^9.0.4",
+        "keyboardevent-from-electron-accelerator": "^2.0.0",
+        "keyboardevents-areequal": "^0.2.2",
+        "md5": "^2.3.0",
+        "mpris-service": "^2.1.2",
+        "node-fetch": "^2.6.8",
+        "simple-youtube-age-restriction-bypass": "https://gitpkg.now.sh/api/pkg.tgz?url=zerodytrash/Simple-YouTube-Age-Restriction-Bypass&commit=v2.5.4",
+        "vudio": "^2.1.1",
+        "youtubei.js": "^4.1.0",
+        "ytpl": "^2.3.0"
+    },
+    "devDependencies": {
+        "@playwright/test": "^1.29.2",
+        "auto-changelog": "^2.4.0",
+        "del-cli": "^5.0.0",
+        "electron": "^22.0.2",
+        "electron-builder": "^23.6.0",
+        "electron-devtools-installer": "^3.2.0",
+        "electron-icon-builder": "^2.0.1",
+        "node-gyp": "^9.3.1",
+        "playwright": "^1.29.2",
+        "xo": "^0.53.1"
+    },
+    "auto-changelog": {
+        "hideCredit": true,
+        "package": true,
+        "unreleased": true,
+        "output": "changelog.md"
+    },
+    "xo": {
+        "envs": [
+            "node",
+            "browser"
+        ],
+        "rules": {
+            "quotes": [
+                "error",
+                "double",
+                {
+                    "avoidEscape": true,
+                    "allowTemplateLiterals": true
+                }
+            ]
+        }
+    },
+    "packageManager": "yarn@3.4.1"
 }
